# real_python_reader

./: mytests.sh  pyproject.toml  ruff.toml
.github/test_workflows/: my_test.yaml  test_workflow.yml
.github/workflows/: example.yaml  final_lint.yaml  my_lint.yaml  my_test.yaml  test_workflow.yaml  test_workflow.yml
.github/workflows_orig/: my_lint.yaml  publish.yaml
common/: mytests.sh  pyproject.toml
common/SQL/: hash_db.sql
common/common/: db.py
common/tests/: test_common.py
compose/: cache.json
compose/dependencies_external/: compose.yaml
events/: pyproject.toml
events/tests/: test_events.py
project1/: pyproject.toml
services/events/: config.py  pyproject.toml
services/events/SQL/: first.sql
services/events/tests/: cov.xml  test_events.py
services/visits/: pyproject.toml
services/visits/tests/: test_visits.py
src/reader/: __main__.py  feed.py  one_ring.py  viewer.py
visits/: pyproject.toml
