[tool.poetry]
name = "sso"
version = "0.1.0"
description = "SSO service where different single sign-on capabilities will be deployed"
authors = ["Lawrence Nevvon"]

[tool.poetry.dependencies]


python = ">=3.10,<3.12"

signxml = "^2.9.0"
PyJWT = "^2.4.0"
Flask-RESTful = "^0.3.9"
requests = "^2.28.1"
pytest-flask = "^1.2.0"
Flask-Bcrypt = "^1.0.1"
Flask-JWT-Extended = "^4.4.4"
mysql-connector-python = "^8.0.32"
watchtower = "^3.0.1"
requests-mock = "^1.12.1"
paramiko = "^3.4.0"
boto3-stubs = "^1.34.89"
botocore-stubs = "^1.34.89"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
pytest = "^7.1.3"
pytest-watch = "^4.2.0"
pytest-testmon = "^1.3.6"
pytest-cov = "^4.1.0"
requests-mock = "^1.12.1"
boto3-stubs = "^1.37.32"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
#  -m "not dynamodbtest"
addopts = '--durations=5 --cov-report xml:./tests/cov.xml --cov=. -v -m "not dynamodbtest and not real_sqs_test"'
log_cli = "1"
log_cli_level = "DEBUG"
pythonpath = "../.."
markers = ["dynamodbtest: marks tests that require the dynamo db service", "real_sqs_test: Tests that touch a real sqs queue"]
